# passive-logic-simulator

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TASK.md  build.sh  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: simulation.ts
frontend/src/components/: DocumentationTab.tsx  ErrorBoundary.tsx  ErrorChart.tsx  ErrorEstimationTab.tsx  ParameterForm.tsx  SimulationChart.tsx  SystemDiagram.tsx  TabNavigation.tsx  Tooltip.tsx
frontend/src/types/: simulation.ts
resources/: default_config.toml
resources/templates/: weather.csv
src/passive_logic_simulator/: __init__.py  __main__.py  api.py  cli.py  config.py  control.py  numerics.py  params.py  physics.py  simulation.py  time_series.py  weather.py
tests/: test_api_spa_security.py  test_cli.py  test_config_and_simulation.py  test_config_helpers.py  test_control.py  test_numerics.py  test_params_validation.py  test_physics.py  test_time_series.py  test_weather.py
