[project]
name = "passive_logic_simulator"
version = "0.1.0"
description = "Simulation of a simple system: solar collector + pump + storage tank"
readme = "README.md"
authors = [
    { name = "Krzysztof Arendt", email = "16005748+krzysztofarendt@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
passive-logic-simulator = "passive_logic_simulator.cli:main"
passive_logic_simulator = "passive_logic_simulator.cli:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
